Kubernetes/AuthService/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-service-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /auth
            pathType: "Prefix"
            backend:
              service:
                name: auth-service-service
                port:
                  number: 80
